<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_label">Emergency information</string>
    <string name="medical_info_title">Medical information</string>
    <string name="add_medical_info">Add information</string>
    <string name="edit_info">Edit emergency information</string>
    <string name="tab_title_info">Info</string>
    <string name="tab_title_contacts">Contacts</string>
    <string name="name">Name</string>
    <string name="unknown_name">Unknown</string>
    <string name="address">Address</string>
    <string name="unknown_address">Unknown</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="unknown_date_of_birth">Unknown</string>
    <string name="dob">
        (<xliff:g id="date_of_birth" example="3 feb 1987">%1$s</xliff:g>)
    </string>
    <string name="age">
        Age: <xliff:g id="numerical_age" example="29">%1$d</xliff:g>
    </string>
    <string name="remove_dob_icon_text">Remove date of birth</string>
    <string name="blood_type">Blood type</string>
    <string name="unknown_blood_type">Unknown</string>
    <string name="oplus">O+</string>
    <string name="ominus">O-</string>
    <string name="aplus">A+</string>
    <string name="aminus">A-</string>
    <string name="bplus">B+</string>
    <string name="bminus">B-</string>
    <string name="abplus">AB+</string>
    <string name="abminus">AB-</string>
    <string name="hh">H/H</string>
    <string-array name="blood_type_entries">
        <item>@string/oplus</item>
        <item>@string/ominus</item>
        <item>@string/aplus</item>
        <item>@string/aminus</item>
        <item>@string/bplus</item>
        <item>@string/bminus</item>
        <item>@string/abplus</item>
        <item>@string/abminus</item>
        <item>@string/hh</item>
        <item>@string/unknown_blood_type</item>
    </string-array>
    <string-array name="blood_type_values">
        
        <item>0+</item>
        
        <item>O-</item>
        
        <item>A+</item>
        
        <item>A-</item>
        
        <item>B+</item>
        
        <item>B-</item>
        
        <item>AB+</item>
        
        <item>AB-</item>
        
        <item>H/H</item>
        <item></item>
    </string-array>
    <string-array name="blood_type_content_description">
        <item>@string/o_positive</item>
        <item>@string/o_negative</item>
        <item>@string/a_positive</item>
        <item>@string/a_negative</item>
        <item>@string/b_positive</item>
        <item>@string/b_negative</item>
        <item>@string/ab_positive</item>
        <item>@string/ab_negative</item>
        <item>@string/h_h</item>
        <item>@string/unknown_blood_type</item>
    </string-array>
    <string name="o_positive">O positive</string>
    <string name="o_negative">O negative</string>
    <string name="a_positive">A, positive</string>
    <string name="a_negative">A, negative</string>
    <string name="b_positive">B positive</string>
    <string name="b_negative">B negative</string>
    <string name="ab_positive">A B positive</string>
    <string name="ab_negative">A B negative</string>
    <string name="h_h">H H</string>
    <string name="allergies">Allergies</string>
    <string name="unknown_allergies">Unknown</string>
    <string name="allergies_hint">For example, peanuts</string>
    <string name="medications">Medications</string>
    <string name="unknown_medications">Unknown</string>
    <string name="medications_hint">For example, aspirin</string>
    <string name="medical_conditions">Medical notes</string>
    <string name="unknown_medical_conditions">Unknown</string>
    <string name="medical_conditions_hint">For example, asthma</string>
    <string name="organ_donor">Organ donor</string>
    <string name="unknown_organ_donor">Unknown</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string-array name="organ_donor_entries">
        <item>@string/yes</item>
        <item>@string/no</item>
        <item>@string/unknown_organ_donor</item>
    </string-array>
    <string-array name="organ_donor_values">
        
        <item>Yes</item>
        
        <item>No</item>
        <item></item>
    </string-array>
    <string name="emergency_contacts_title">Emergency contacts</string>
    <string name="add_emergency_contact">Add contact</string>
    <string name="fail_load_contact_picker">Couldn\'t find a contact picker</string>
    <string name="fail_display_contact">Can\'t display the contact</string>
    <string name="remove_contact">
        Remove <xliff:g id="contact_name" example="John Doe">%1$s</xliff:g> from emergency contacts?
    </string>
    <string name="remove_contact_icon_text">Remove contact</string>
    <string name="fail_add_contact">Unable to read contact information properly</string>
    <string name="remove">Remove</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="phone_type_and_phone_number">
        <xliff:g id="phone_type" example="Mobile">%1$s</xliff:g> • <xliff:g id="phone_number" example="333-444-5566">%2$s</xliff:g>
    </string>
    <string name="no_info_provided">No information about the phone\'s owner</string>
    <string name="tap_pencil">If this is your phone, tap the pencil icon to add information that will be displayed here in case of emergency</string>
    <string name="clear_all">Clear all</string>
    <string name="clear">Clear</string>
    <string name="clear_all_message">Clear all information and contacts?</string>
    <string name="emergency_info_footer">Adding medical information and emergency contacts can help first responders in an emergency.\n\nAnyone can read this information from your lock screen, and dial your contacts by tapping their names, without unlocking your phone.</string>
    <string name="settings_suggestion_title">Add emergency information</string>
    <string name="settings_suggestion_body">Let first responders see your information</string>
    <string name="user_image_take_photo">Take a photo</string>
    <string name="user_image_choose_photo">Choose an image</string>
    <string name="user_image_photo_selector">Select photo</string>
    <string name="user_nickname">Nickname</string>
</resources>