<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2017 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<PreferenceScreen
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:key="edit_emergency_info_settings"
        android:title="@string/app_label">
    <PreferenceCategory
            android:key="medical_info"
            android:title="@string/medical_info_title">
        <com.android.emergency.preferences.EmergencyNamePreference
            android:icon="@drawable/ic_account_circle_filled_24dp"
            android:key="name"
            android:title="@string/name"
            android:summary="@string/unknown_name" />

        <com.android.emergency.preferences.EmergencyEditTextPreference
            android:icon="@drawable/ic_home_24dp"
            android:key="address"
            android:singleLine="false"
            android:inputType="textCapWords|textPostalAddress|textMultiLine"
            android:title="@string/address" />

        <com.android.emergency.preferences.EmergencyListPreference
            xmlns:app="http://schemas.android.com/apk/res/com.android.emergency"
            android:icon="@drawable/ic_bloodtype_24dp"
            android:entries="@array/blood_type_entries"
            android:entryValues="@array/blood_type_values"
            android:key="blood_type"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            android:title="@string/blood_type"
            app:entryContentDescriptions="@array/blood_type_content_description" />

        <com.android.emergency.preferences.EmergencyEditTextPreference
            android:capitalize="sentences"
            android:icon="@drawable/ic_allergies_black_24dp"
            android:hint="@string/allergies_hint"
            android:textColorHint="@color/hint_text_color"
            android:key="allergies"
            android:inputType="textMultiLine"
            android:singleLine="false"
            android:title="@string/allergies" />

        <com.android.emergency.preferences.EmergencyEditTextPreference
            android:capitalize="sentences"
            android:icon="@drawable/ic_medication_24dp"
            android:hint="@string/medications_hint"
            android:textColorHint="@color/hint_text_color"
            android:key="medications"
            android:inputType="textMultiLine"
            android:singleLine="false"
            android:title="@string/medications" />

        <com.android.emergency.preferences.EmergencyListPreference
            android:icon="@drawable/ic_favorite_border_24dp"
            android:entries="@array/organ_donor_entries"
            android:entryValues="@array/organ_donor_values"
            android:key="organ_donor"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            android:title="@string/organ_donor" />

        <com.android.emergency.preferences.EmergencyEditTextPreference
            android:capitalize="sentences"
            android:hint="@string/medical_conditions_hint"
            android:textColorHint="@color/hint_text_color"
            android:icon="@drawable/ic_note_alt_24dp"
            android:key="medical_conditions"
            android:inputType="textMultiLine"
            android:singleLine="false"
            android:title="@string/medical_conditions" />

        <Preference
            android:key="edit_medical_info"
            android:icon="@drawable/ic_add_24dp"
            android:title="@string/add_medical_info">
            <intent android:action="android.emergency.EDIT_MEDICAL_INFO"/>
        </Preference>
    </PreferenceCategory>

    <com.android.emergency.preferences.EmergencyContactsPreference
            android:key="emergency_contacts"
            android:title="@string/emergency_contacts_title"/>
    <Preference
        android:key="add_emergency_contact"
        android:icon="@drawable/ic_add_24dp"
        android:title="@string/add_emergency_contact"/>

    <com.android.settingslib.widget.FooterPreference
        android:title="@string/emergency_info_footer"
        android:key="footer_preference"
        android:selectable="false"/>
</PreferenceScreen>
